--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
 
   --primary: oklch(0.4937 0.1513 262.34);
   --primary-foreground: oklch(1.0 0 0);
+  --primary-hover: #D0E6FF;
 
   --secondary: oklch(0.9165 0.0415 251.64);
   --secondary-foreground: oklch(0.3449 0.1461 260.88);
@@ -47,7 +48,7 @@
   --sidebar-border: oklch(0.9276 0.0058 264.53);
   --sidebar-ring: oklch(0.4937 0.1513 262.34);
 
-  --radius: 0.2rem;
+  --radius: 0.375rem;
 }
 
 .dark {
@@ -101,6 +102,7 @@
 
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
+  --color-primary-hover: var(--primary-hover);
 
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
